CompanyScopedEntity